force-app/main/default/objects/Product2/fields/Commodity__c.field-meta.xml
<CustomField>
    <fullName>Commodity__c</fullName>
    <label>Commodity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Crude</fullName>
            </value>
            <value>
                <fullName>Fuel Oil</fullName>
            </value>
            <value>
                <fullName>Gasoil</fullName>
            </value>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>Jet</fullName>
            </value>
            <value>
                <fullName>Naphtha</fullName>
            </value>
            <value>
                <fullName>Mogas</fullName>
            </value>
            <value>
                <fullName>LPG</fullName>
            </value>
            <value>
                <fullName>Diff</fullName>
            </value>
            <value>
                <fullName>Crack</fullName>
            </value>
            <value>
                <fullName>CO2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>