force-app/main/default/objects/Product2/fields/Material_Number__c.field-meta.xml
<CustomField>
    <fullName>Material_Number__c</fullName>
    <description>Material Number</description>
    <label>Material Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>