force-app/main/default/objects/Product2/fields/Net_Weight__c.field-meta.xml
<CustomField>
    <fullName>Net_Weight__c</fullName>
    <label>Net Weight</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>