force-app/main/default/objects/Product2/fields/Product_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Number__c</fullName>
    <description>Product Number</description>
    <label>GSAP Product Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>