force-app/main/default/objects/Product2/fields/Product_Unit__c.field-meta.xml
<CustomField>
    <fullName>Product_Unit__c</fullName>
    <label>Product Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>KGV</fullName>
            </value>
            <value>
                <fullName>KGS</fullName>
            </value>
            <value>
                <fullName>KG</fullName>
            </value>
            <value>
                <fullName>KA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>