force-app/main/default/objects/Product2/fields/Products_Sales_Line__c.field-meta.xml
<CustomField>
    <fullName>Products_Sales_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Products Sales Line</label>
    <referenceTo>TCP_Products_Sales_Line__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>