force-app/main/default/objects/Product2/fields/Quotation__c.field-meta.xml
<CustomField>
    <fullName>Quotation__c</fullName>
    <label>Quotation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CIF NWE</fullName>
            </value>
            <value>
                <fullName>FOB NWE</fullName>
            </value>
            <value>
                <fullName>FOB Rdam</fullName>
            </value>
            <value>
                <fullName>Singapore</fullName>
            </value>
            <value>
                <fullName>USG</fullName>
            </value>
            <value>
                <fullName>IPE</fullName>
            </value>
            <value>
                <fullName>NYMEX</fullName>
            </value>
            <value>
                <fullName>Carbon Point</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>