force-app/main/default/objects/Product2/fields/TCP_STNSAP_Prod_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>TCP_STNSAP_Prod_ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>STNSAP Prod ExternalId</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>