force-app/main/default/objects/Product2/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KG</fullName>
            </value>
            <value>
                <fullName>KGS</fullName>
            </value>
            <value>
                <fullName>KGV</fullName>
            </value>
            <value>
                <fullName>KHZ</fullName>
            </value>
            <value>
                <fullName>TO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>