force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>TCP_STNSAP_Prod_ExternalId__c</columns>
    <columns>TCP_P94_Prod_ExternalId__c</columns>
    <columns>Products_Sales_Line__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <columns>Gross_Weight__c</columns>
    <columns>Net_Weight__c</columns>
    <columns>Unit_of_Measure__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>